--- a/eks/projects/EKS Deployment Using Ingress/service.yml
+++ b/eks/projects/EKS Deployment Using Ingress/service.yml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: eks-sample-linux-service
+  name: eks-2048-linux-service
   labels:
-    app: eks-sample-linux-app
+    app: eks-2048-linux-app
 spec:
   selector:
-    app: eks-sample-linux-app
+    app: eks-2048-linux-app
   ports:
     - protocol: TCP
       port: 80
